Fixed the cutoff of the title and white points on top of the stars

--- a/src/styl/video-overlay-ctav2.styl
+++ b/src/styl/video-overlay-ctav2.styl
@@ -48,7 +48,7 @@
         left: $video-overlay-styles-download-element-height + 2 * $video-overlay-styles-download-element-margin;
         display: inline-block;
         width: 4.5 * $video-overlay-styles.base-size;
-        line-height: 1;
+        line-height: 1.2;
 
         .game-rating {
           position: relative;
